# BlueStarOS

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TaskContext分析.md  linker.ld  run.h  从ELF创建应用地址空间详解.md
.cargo/: config.toml​
kernel/: Cargo.toml  Makefile  build.rs  build_apps.py  te.elf
kernel/BlueosFS/: Cargo.toml
kernel/BlueosFS/src/: api.rs  bitmap.rs  blueosfs.rs  lib.rs  root.rs  vfs.rs
kernel/src/: app.asm  config.rs  console.rs  entry.asm  linker.ld  logger.rs  main.rs  panic.rs  sbi.rs  te.elf
kernel/src/driver/: mod.rs  normal_externel_interrupt.rs  plic.rs  stdin.rs  stdio.rs
kernel/src/driver/virtio/: blk_api.rs  blockdevice.rs  mod.rs  virtioblk.rs
kernel/src/driver/virtio_blk/: block.rs  mod.rs  testblock.rs
kernel/src/driver/virtio_blk_c/: printf.c  printf.h  rust_alloc.h  rust_print.h  virtio_blk.c  virtio_blk.h  virtio_blk_func.h  virtio_common.h  virtio_queue.h
kernel/src/ffi/: ffi_alloc.rs  ffi_print.rs  mod.rs
kernel/src/fs/: api.rs  mod.rs  ramFileSystem.rs  root.rs  vfs.rs
kernel/src/memory/: address.rs  frame_allocator.rs  memset.rs  mod.rs
kernel/src/sync/: up.rs
kernel/src/syscall/: mod.rs  syscall.rs
kernel/src/task/: _switch.S  mod.rs  process.rs  task.rs
kernel/src/time/: mod.rs  timer.rs
kernel/src/trap/: mod.rs  pagefaultHandler.rs  trap.asm
src/: boot.S  config.rs  console.rs  entry.asm  linker.ld  logger.rs  main.rs  sbi.rs  uart.rs
src/config/: config.rs  mod.rs
src/memory/: address.rs  bluealloc.rs  frame_allocator.rs  memset.rs  mod.rs
src/trap/: mod.rs  trap.S
user/: Cargo.toml
(+10 files in other folders)
