[package]
name = "os"
version = "0.1.0"
authors = ["Dirinkbottle"]
edition = "2021"



[dependencies]
log = "0.4"
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
xmas-elf = "0.7.0"
spin = "0.9"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
BlueosFS = {path = "./BlueosFS"}

[build-dependencies]
cc = "1.0"

[profile.release]
debug = true
